--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <th scope="col">esGMX</th>
       <th scope="col">Price</th>
       <th scope="col">Total</th>
+      <th scope="col">Discount</th>
       <th scope="col">Details</th>
     </tr>
   </thead>
@@ -29,6 +30,7 @@
       <td data-label="esGMX">172</td>
       <td data-label="Ask">$37.79</td>
       <td data-label="Price">$6,500</td>
+      <td data-label="Discount">-54.55%</td>
          <td data-label="Swap"><button class="button" href="#" onclick="show('popup1')">Purchase</button>
 
 <div class="popup" id="popup1">
@@ -47,6 +49,7 @@
       <td data-label="esGMX">129</td>
       <td data-label="Ask">$51.74</td>
       <td data-label="Ask Amt">$6,675</td>
+      <td data-label="Discount">-37.27%</td>
       
       <td data-label="Swap"><button class="button" href="#" onclick="show('popup2')">Purchase</button>
 
@@ -67,6 +70,8 @@
       <td data-label="esGMX">190</td>
       <td data-label="Ask">$85.44</td>
       <td data-label="Ask Amt">$15,194</td>
+            <td data-label="Discount">+2.75%</td>
+
       <td data-label="Swap"><button class="button" href="#" onclick="show('popup3')">Purchase</button>
 
 <div class="popup" id="popup3">
@@ -91,12 +96,16 @@
     </tr>
   </tbody>
 </table>
+
+<div id="info" style='width:35%;margin-right:auto;margin-left:auto;margin-top:2rem;'>
+<p><a href="./faq/">Please read the FAQ.</a></p>
+</div>
 <!-- 
  <div class="faq-section">
   
   <details>
     <summary>
-      <h4>What is GMX Market?</h4>
+      <h4>GMX Market</h4>
       <span class="material-symbols-outlined"><></span>  
     </summary>
     <p style="text-align:left;margin-right: auto;
@@ -105,7 +114,7 @@
  
     <details>
     <summary>
-      <h4>What is GMX Market?</h4>
+      <h4>esGMX</h4>
       <span class="material-symbols-outlined"><></span>  
     </summary>
     <p style="text-align:left;margin-right: auto;
@@ -114,7 +123,7 @@
  
    <details>
     <summary>
-      <h4>What is GMX Market?</h4>
+      <h4>GMX, GLP</h4>
       <span class="material-symbols-outlined"><></span>  
     </summary>
     <p style="text-align:left;margin-right: auto;
@@ -132,8 +141,8 @@
  
   
   
-</div>
- -->
+</div> -->
+
 
 </body>
 
